--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.py[cod]
 *.log
 *.egg-info
-venv
-.venv
+venv/
+.venv/
 docs/_build
 docs/crowdin.py
 *.buildinfo
@@ -14,3 +14,7 @@ docs/crowdin.py
 *.jpg
 *.flac
 *.mo
+.idea/
+.DS_Store
+.python-version
+__pycache__
