--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
-aiohttp>=3.6.0,<3.8.0
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
+cfgv==3.3.1
+chardet==4.0.0
+distlib==0.3.3
+filelock==3.2.0
+identify==2.2.15
+idna==3.2
+importlib-metadata==4.8.1
+multidict==5.1.0
+nodeenv==1.6.0
+platformdirs==2.4.0
+pre-commit==2.15.0
+PyYAML==5.4.1
+six==1.16.0
+toml==0.10.2
+typing-extensions==3.10.0.2
+virtualenv==20.8.1
+yarl==1.6.3
+zipp==3.6.0
